--- a/recipes/pgma-simple/meta.yaml
+++ b/recipes/pgma-simple/meta.yaml
@@ -1,11 +1,11 @@
 package:
-  name: nspdk
-  version: 9.2
+  name: pgma-simple
+  version: 0.1
 
 source:
   fn: PGMAsimple-0.1.tar.gz
   url: https://raw.githubusercontent.com/BackofenLab/GraphClust/master/pgma_src/PGMAsimple-0.1.tar.gz
-  sha256: c11534a7606dec9fbde0509cf790515dfcb68b550568ef3e1c0eab50f427d5b5
+  sha256: 785c86b3e57461ffd6c4b8d1002c24d69fc33552b2e81bcd0a9da589330d2b70
 
 build:
   number: 0
@@ -21,7 +21,7 @@ requirements:
 
 test:
   commands:
-    - NSPDK -h >/dev/null
+    - pgma $SRC_DIR/Example/test.names $SRC_DIR/Example/test.dist-list > /dev/null
 
 about:
   home: https://github.com/BackofenLab/GraphClust
